--- a/css/style.css
+++ b/css/style.css
@@ -41,20 +41,28 @@ body {
 	display: inline-block; 	
 }
 
+.lang_img{
+	position:relative;
+	margin-top: -10px;
+	margin-left: -3px;
+	width: 40px;
+	height: 36px;
+}
+
 .lang{
-	width: 35px;
-	height: 30px;
+	width: 40px;
+	height: 25px;
 	font-size: 1.2em;
 }
 
 #english{
-	background-image: url('../images/uk.png');	
+	/*background-image: url('../images/uk.png');*/	
 	background-repeat: no-repeat;
 
 }
 
 #russian{
-	background-image: url('../images/rus.png');	
+	/*background-image: url('../images/rus.png');*/	
 	background-repeat: no-repeat;
 }
 
